# pyBlackJack

./: .gitIgnore  .gitignore  README.md  pyproject.toml
pyblackjack/: __main__.py
